# tensor-trader

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/instructions/: model-training-selection.instructions.md  multi-timeframe-data-workflow.instructions.md
.github/prompts/: redis-container-batch-workflow.prompt.md
.github/workflows/: ci.yml  docker.yml
.tmp/: neo_exec_0551b82a.sh  neo_exec_1e92abbb.sh  neo_exec_364d1c72.sh  neo_exec_3b3560f3.sh  neo_exec_3d2d757a.sh  neo_exec_45ed915f.sh  neo_exec_52163e4c.sh  neo_exec_572c12cb.sh  neo_exec_5abce7df.sh  neo_exec_6c4c4565.sh  neo_exec_8a67f03d.sh  neo_exec_e30fc00d.sh
plans/: plan.md
tensor_trader/connectors/: __init__.py  base_connector.py
tensor_trader/connectors/bitget/: bitget_connector.py
tensor_trader/connectors/ctrader/: ctrader_connector.py
tensor_trader/connectors/hyperliquid/: hyperliquid_connector.py
tensor_trader/connectors/mt5/: mt5_connector.py
tensor_trader/dashboard/: __init__.py  console_ui.py
tensor_trader/data/fetchers/: base_fetcher.py  bitget_fetcher.py  hyperliquid_fetcher.py
tensor_trader/features/: pipeline.py
tensor_trader/features/indicators/: extended_indicators.py  technical.py
tensor_trader/inference/: __init__.py  engine.py  executor.py
tensor_trader/live_trading/: enhanced_trading_loop.py  trading_loop.py
tensor_trader/reporting/: __init__.py  metrics.py
tensor_trader/serving/: api.py  onnx_export.py
tensor_trader/training/: hyperparameters.py  train.py
(+7 files in other folders)
